--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/CatalogCustomizer.form
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/CatalogCustomizer.form
@@ -86,9 +86,16 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="99" green="66" red="66" type="rgb"/>
         </Property>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="javax.swing.UIManager.getFont (&quot;Label.font&quot;)" type="code"/>
+        </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
           <ResourceString bundle="org/netbeans/modules/xml/catalog/impl/sun/Bundle.properties" key="DESC_catalog_fmts" replaceFormat="Util.getString(&quot;{key}&quot;)"/>
         </Property>
+        <Property name="disabledTextColor" type="java.awt.Color" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="javax.swing.UIManager.getColor (&quot;Label.foreground&quot;)" type="code"/>
+        </Property>
+        <Property name="enabled" type="boolean" value="false"/>
         <Property name="opaque" type="boolean" value="false"/>
       </Properties>
       <Constraints>
