--- a/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/TreeCDATASectionCustomizer.form
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/TreeCDATASectionCustomizer.form
@@ -33,6 +33,7 @@
             <Component class="javax.swing.JTextArea" name="dataTextArea">
 
               <Events>
+                <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="dataTextAreaFocusGained"/>
                 <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="dataTextAreaFocusLost"/>
                 <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="dataTextAreaKeyPressed"/>
               </Events>
