--- a/diff/src/org/netbeans/modules/merge/builtin/visualizer/MergeDialogComponent.form
+++ b/diff/src/org/netbeans/modules/merge/builtin/visualizer/MergeDialogComponent.form
@@ -10,6 +10,9 @@
     <Container class="javax.swing.JTabbedPane" name="mergeTabbedPane">
       <Properties>
         <Property name="tabPlacement" type="int" value="3"/>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[600, 600]"/>
+        </Property>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
