--- a/testtools/src/org/netbeans/modules/testtools/wizards/TestTypeAdvancedSettingsPanel.form
+++ b/testtools/src/org/netbeans/modules/testtools/wizards/TestTypeAdvancedSettingsPanel.form
@@ -11,31 +11,6 @@
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"/>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="suffixLabel">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="IDE Command Line Suffix: "/>
-        <Property name="displayedMnemonic" type="int" value="73"/>
-        <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection component="suffixField" type="bean"/>
-        </Property>
-      </Properties>
-      <Constraints>
-        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-          <GridBagConstraints gridX="0" gridY="2" gridWidth="0" gridHeight="1" fill="0" ipadX="0" ipadY="0" insetsTop="4" insetsLeft="4" insetsBottom="0" insetsRight="4" anchor="16" weightX="1.0" weightY="1.0"/>
-        </Constraint>
-      </Constraints>
-    </Component>
-    <Component class="javax.swing.JTextField" name="suffixField">
-
-      <Events>
-        <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="suffixFieldFocusGained"/>
-      </Events>
-      <Constraints>
-        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-          <GridBagConstraints gridX="0" gridY="3" gridWidth="0" gridHeight="1" fill="2" ipadX="0" ipadY="0" insetsTop="4" insetsLeft="4" insetsBottom="4" insetsRight="4" anchor="18" weightX="0.0" weightY="0.0"/>
-        </Constraint>
-      </Constraints>
-    </Component>
     <Component class="javax.swing.JLabel" name="excludesLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Compilation Excludes: "/>
@@ -107,7 +82,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="executeLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Execution Class Path: "/>
+        <Property name="text" type="java.lang.String" value="Execution Extra Jars: "/>
         <Property name="displayedMnemonic" type="int" value="69"/>
         <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection component="executeField" type="bean"/>
@@ -148,7 +123,8 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jvmLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="JVM Command Line Suffix: "/>
+        <Property name="text" type="java.lang.String" value="Command Line Suffix: "/>
+        <Property name="displayedMnemonic" type="int" value="83"/>
         <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection component="jvmField" type="bean"/>
         </Property>
@@ -173,6 +149,7 @@
     <Component class="javax.swing.JLabel" name="jemmyLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Jemmy Home: "/>
+        <Property name="displayedMnemonic" type="int" value="77"/>
         <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection component="jemmyField" type="bean"/>
         </Property>
@@ -213,6 +190,7 @@
     <Component class="javax.swing.JLabel" name="jellyLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Jelly Home: "/>
+        <Property name="displayedMnemonic" type="int" value="76"/>
         <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection component="jellyField" type="bean"/>
         </Property>
