--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/resources/templates/XMLCatalog.xml
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/resources/templates/XMLCatalog.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- OASIS XML Catalog file creted  by __USER__ on __DATE__ -->
+<!-- OASIS XML Catalog file created  by __USER__ on __DATE__ -->
 
 <!-- see http://www.oasis-open.org/committees/entity/spec.html -->
 
 <catalog xmlns="urn:oasis:names:tc:entity:xmlns:xml:catalog">                
 
-    <!-- Sample publid ID mapping regitration. -->
+    <!-- Sample public ID mapping registration. -->
     <public publicId="-//Company//Entity ID//EN" uri="file:/path/entity"/>
 
 </catalog>
