--- a/form/build.xml
+++ b/form/build.xml
@@ -104,8 +104,43 @@ Microsystems, Inc. All Rights Reserved.
     <delete file="manifest-subst.mf"/>
     <delete file="form.nbm"/>
     <delete dir="netbeans"/>
+    <delete dir="javadoc"/>
     <delete dir="Info"/>
     <delete dir="tmp" />
+  </target>
+
+  <target name="javadoc" depends="compile" description="Build form module API documentation.">
+    <tstamp/>
+    <property name="apis-footer" value="&lt;font size=-2 color=gray&gt;Built on ${TODAY}.&amp;nbsp;&amp;nbsp;|&amp;nbsp;&amp;nbsp;Portions Copyright 1997-2002 Sun Microsystems, Inc. All rights reserved.&lt;/font&gt;"/>
+    <echo message="Build form module API documentation..."/>
+    <mkdir dir="javadoc"/>
+    <javadoc destdir="javadoc"
+             packagenames="org.netbeans.modules.form,org.netbeans.modules.form.actions,org.netbeans.modules.form.codestructure,org.netbeans.modules.form.compat2.border,org.netbeans.modules.form.editors,org.netbeans.modules.form.editors2,org.netbeans.modules.form.fakepeer,org.netbeans.modules.form.forminfo,org.netbeans.modules.form.layoutsupport,org.netbeans.modules.form.layoutsupport.delegates,org.netbeans.modules.form.palette,org.netbeans.modules.form.util"
+             doctitle="NetBeans form module APIs"
+             windowtitle="NetBeans form module APIs"
+             bottom="${apis-footer}"
+             use="true"
+             splitindex="true"
+             author="false"
+             version="false"
+             maxmemory="384m"
+    >
+      <sourcepath>
+        <pathelement location="src"/>
+      </sourcepath>
+      <classpath>
+        <pathelement location="../openide/openide-13javac-workaround.jar"/>
+        <!-- XXX illegally uses org.netbeans.beaninfo classes: -->
+        <pathelement location="../core/netbeans/lib/core.jar"/>
+        <pathelement location="release/modules/ext/AbsoluteLayout.jar"/>
+        <fileset dir="../openide/netbeans/lib">
+          <include name="openide*.jar" />
+        </fileset>
+        <pathelement location="../java/netbeans/modules/java.jar"/>
+        <pathelement location="${binroot}/core/release/lib/ext/xml-apis.jar"/>
+        <pathelement location="tmp"/>
+      </classpath>
+    </javadoc>    
   </target>
 
 </project>
